--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+.App{
+  max-width: 600px;
+  margin: 0 auto;
+}/* 
+form div{
+  display: grid;
+  grid-template-columns: 40% 60%;
+  grid-template-rows: repeat(2, 1fr);
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+form{
+  display: grid;
+  width: 60%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+label{
+  grid-area: 2/1/3/2;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+input{
+  width: 100%;
+  justify-self: center;
+  margin-bottom: 1em;
+  grid-area: 2/2/3/3;
 }
-
-.App-link {
-  color: #61dafb;
+.msgDiv{
+  grid-template-columns: 1fr;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.msgDiv label{
+  grid-area: 1/1/2/2;
 }
+textarea{
+  grid-area: 2/1/3/3;
+  
+}
+button{
+  justify-self: right;
+  margin-top: 1em;
+}
+span{
+  grid-area: 1/2/2/3;
+} */
